add flicks to unordered list

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                 </form>
             </div>
         </div>
+        <div class="grid-x">
+            <div class="medium-8 medium-offset-2 cell">
+                <ul id="flick-list">
+
+                </ul>
+            </div>
+        </div>
 
         <!--scripts-->
         <script src="app.js"></script>
