--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="grid-x">
-            <div class="medium-8 medium-offset-2 cell">
+            <div class="medium-8 medium-offset-2 cell list-container">
                 <ul id="flick-list">
                 </ul>
             </div>
