created list item template

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
         </div>
         <div class="grid-x">
             <div class="medium-8 medium-offset-2 cell list-container">
-                <ul id="flick-list">
+                <ul id="flick-list" class="no-bullet">
+                    <li class="flick template">
+                        <span class="flick-name">some random name</span>
+                        <span class="actions">
+                            <button class="button">Up</button>
+                            <button class="button">Down</button>
+                            <button class="button">Like</button>
+                            <button class="button">Remove</button>
+                        </span>
+                    </li>
                 </ul>
             </div>
         </div>
