--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="grid-x">
             <div class="medium-8 medium-offset-2 cell list-container">
                 <ul id="flick-list" class="no-bullet">
-                    <li class="flick template grid-x">
+                    <li class="flick template grid-x align-middle">
                         <span class="flick-name cell auto">some random name</span>
-                        <span class="actions buttonGroup cell shrink">
+                        <span class="actions button-group cell shrink">
                             <button class="up button">Up</button>
                             <button class="down button">Down</button>
                             <button class="like button warning">Like</button>
